@@ -49,25 +49,7 @@ namespace AriaMaestosa
         {
             wxGetApp().activateRenderLoop(on);
         }
-        
-        wxString getPrefsValue( const char* entryName )
-        {
-            return wxGetApp().prefs->getValue( wxString(entryName, wxConvUTF8) );
-        }
-        
-        long getPrefsLongValue( const char* entryName )
-        {
-            wxString asString = getPrefsValue(entryName);
-            if (asString.IsEmpty()) return -1;
-            long asInt = -1;
-            if (not asString.ToLong(&asInt))
-            {
-                //ASSERT(false);
-                std::cerr << "WARNING: prefs value <" << asString.mb_str() << "> is not an integer\n";
-            }
-            return asInt;
-        }
-        
+                
         TuningPicker* getTuningPicker()
         {
             return getMainFrame()->getTuningPicker();
