@@ -56,7 +56,7 @@ Sequence::Sequence(IPlaybackModeListener* playbackListener, IActionStackListener
     currentTrack            = 0;
     m_tempo                 = 120;
     m_importing               = false;
-    m_follow_playback       = Core::getPrefsLongValue("followPlayback") != 0;
+    m_follow_playback       = PreferencesData::getInstance()->getBoolValue("followPlayback");
     m_playback_listener     = playbackListener;
     m_action_stack_listener = actionStackListener;
     m_seq_data_listener     = sequenceDataListener;
