@@ -1,4 +1,5 @@
 1.3 beta 5
+- Added support for selecting sound bank on OSX
 - Fixed MIDI export when some notes have a volume of 0
 - Spanish translation (thanks to Othyro)
 - Fix double replace confirmation on OSX (Cocoa)
